--- a/bin/gui/View.fxml
+++ b/bin/gui/View.fxml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.layout.AnchorPane?>
 
 <AnchorPane prefHeight="300.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ViewController">
    <children>
-      <Button fx:id="btTest" layoutX="174.0" layoutY="138.0" mnemonicParsing="false" onAction="#onBtTestAction" text="Button" />
-      <Label layoutX="174.0" layoutY="90.0" text="Click here" />
+      <ComboBox fx:id="comboBoxPerson" layoutX="33.0" layoutY="59.0" onAction="#onComboBoxPersonAction" prefWidth="150.0" promptText="Select a person..." />
+      <Button fx:id="btAll" layoutX="259.0" layoutY="59.0" mnemonicParsing="false" onAction="#onBtAllAction" text="all" />
    </children>
 </AnchorPane>
